Upgrade build to Java 25 and refactor analytics async flow